test/invalid/baseline/nonnullableobjects.txt
Syntax error at line 4, since `interface NonNullable`:
  attribute Foo??
                ^ Can't nullable more than once
